--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Dohee Kim"
 description              : ""
+remote_theme             : mmistakes/minimal-mistakes
 url                      : "https://allie0147.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
